# baxter_Object-Clasification

./: CMakeLists.txt  CMakeLists.txt~  README.md  envio_baxter.cpp  left_baxter.cpp  left_baxter.cpp~  package.xml  right_baxter.cpp
include/baxter_obj_classification/: tools.hpp
launch/: baxter_end_point.launch
old_programms/: baxter_xtion.cpp
scripts/: left_baxter_end_point.py  left_camera.py  left_camera.py~  right_baxter_end_point.py  right_camera.py  right_camera.py~
src/: markers.cpp  tools.cpp
